--- a/TestLandingPage.html
+++ b/TestLandingPage.html
@@ -11,6 +11,7 @@
     <p><a href="default.aspx?ExistsCPNChaos">Check whether campaign exists</a></p>    
     <p><a href="default.aspx?DeleteCPNChaos">Delete Chaos Campaign</a></p>    
     <p><a href="default.aspx?GetDateTimeNow">Get Date Time Now</a></p>  
+    <p><a href="/TrackingPixel/Chaos/Chaos.aspx?Email=daniel.sk.sim@gmail.com">E-mail Read, write value to database</a></p>  
     <p>End of local test page</p>
 
     <p>---------------------------</p>
