Add Multiple E-mail Arguments

--- a/TestLandingPage.html
+++ b/TestLandingPage.html
@@ -4,6 +4,7 @@
     <title></title>
 </head>
 <body>
+    <p>Version: 14 January 2017 10.21am</p>
     <p>Start of local test page</p>
     <p><a href="default.aspx?CreateCPNChaos">Create Chaos Campaign</a></p>
     <p><a href="/TrackingPixel/Chaos/EmailTemplate.html">Launch Chaos Campaign</a></p>
