--- a/TestLandingPage.html
+++ b/TestLandingPage.html
@@ -24,6 +24,7 @@
     <p><a href="http://trackingpixel.azurewebsites.net?ExistsCPNChaos">Check whether campaign exists</a></p>    
     <p><a href="http://trackingpixel.azurewebsites.net?DeleteCPNChaos">Delete Chaos Campaign</a></p>    
     <p><a href="http://trackingpixel.azurewebsites.net?GetDateTimeNow">Get Date Time Now</a></p>  
+    <p><a href="http://trackingpixel.azurewebsites.net?ListOfCPN">Get List of Subdirectories</a></p>  
     <p>End of live test page</p>
 </body>
 </html>
